--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <html>
 
  <head>
-   <title>Emotion To Emoji</title>
+   <title>HAND GESTURE</title>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
    <div class="container">
 
      <center>
-       <h3 class="btn btn-warning heading">EMOTION TO EMOJI APP
+       <h3 class="btn btn-warning heading">HAND GESTURE APP
          <br>
          <span>&#128077;</span>
          <span>&#9996;</span>
@@ -25,7 +25,7 @@
        </h3>
        <br><br>
 
-       <p style="font-size: 22px;">Take your selfie to generate emoji
+       <p style="font-size: 22px;">Take your selfie to generate gesture 
          <br>
          <b style="color: yellow">Best</b>
          <br>
